# CPP-Base-Example

./: CMakeLists.txt
MyLibrary/include/: example.h  hello.h
MyLibrary/src/: example.cpp  hello.cpp
MyLibraryTest/: example_test.cpp
MyLibraryTestApp/: main.cpp
